hadoop/k8s/deploy/deployment-upgrade.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: upgrade
  name: upgrade
  namespace: hadoop
spec:
  selector:
    matchLabels:
      app: upgrade
  template:
    metadata:
      labels:
        app: upgrade
    spec:
      containers:
      - env:
        - name: CLUSTER_NAME
          value: hadoop
        - name: SERVICE_NAME
          value: upgrade
        image: localhost:5000/hadoop:3.4.2
        imagePullPolicy: Always
        name: upgrade
        ports:
        - containerPort: 9000
          name: node
          protocol: TCP
        - containerPort: 9870
          name: web
          protocol: TCP
        volumeMounts:
        - mountPath: /hadoop/dfs/name
          name: hadoop-volume
          subPath: namenode
          readOnly: false
      restartPolicy: Always
      volumes:
      - name: hadoop-volume
        persistentVolumeClaim:
          claimName: hadoop-pvc
