hadoop/k8s/deploy/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
  name: hadoop-gateway
  namespace: hadoop
spec:
  gatewayClassName: traefik
  listeners:
    - name: namenode
      hostname: namenode.hdfs.localhost
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: namenode-hadoop-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: datanode
      hostname: datanode.hdfs.localhost
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: datanode-hadoop-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: resourcemanager
      hostname: resourcemanager.hdfs.localhost
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: resourcemanager-hadoop-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: nodemanager
      hostname: nodemanager.hdfs.localhost  
      protocol: HTTPS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - name: nodemanager-hadoop-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: historyserver
      hostname: historyserver.hdfs.localhost
      protocol: HTTPS
      port: 8443  
      tls:
        mode: Terminate
        certificateRefs:
          - name: historyserver-hadoop-tls
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: namenode-http
  namespace: hadoop
spec:
  parentRefs:
    - name: hadoop-gateway
      sectionName: namenode
      kind: Gateway
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: namenode
          namespace: hadoop
          port: 9870
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: datanode-http
  namespace: hadoop
spec:
  parentRefs:
    - name: hadoop-gateway
      sectionName: datanode
      kind: Gateway
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: datanode
          namespace: hadoop
          port: 9864
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: resourcemanager-http
  namespace: hadoop
spec:
  parentRefs:
    - name: hadoop-gateway
      sectionName: resourcemanager
      kind: Gateway
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: yarn
          namespace: hadoop
          port: 8088
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nodemanager-http
  namespace: hadoop
spec:
  parentRefs:
    - name: hadoop-gateway
      namespace: hadoop
      sectionName: nodemanager
      kind: Gateway
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: yarn
          namespace: hadoop
          port: 8042
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: historyserver-http
  namespace: hadoop
spec:
  parentRefs:
    - name: hadoop-gateway
      sectionName: historyserver
      kind: Gateway
  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /
       backendRefs:
        - name: yarn
          namespace: hadoop
          port: 8188
